app/assets/stylesheets/style.css.scss
@import url(http://fonts.googleapis.com/css?family=Lato:400,700,300,900&subset=latin,latin-ext);
@import url('fonts/fonts.css');

* {
	box-sizing: border-box; /* 1 */
}

html {
	font-family: 'Lato', sans-serif;
	color: #7c8d87;
	line-height: 2;
	font-size: 12px;
	height: 100%;
}

body {
	background: #fff;
	height: 100%;
}

.reset-ul {
	list-style: none;
	padding: 0;
	margin: 0;
}

.clearfix:before,
.clearfix:after {
  display: table;
  content: " ";
}

.clearfix:after {
  clear: both;
}


/* --------------------------------------------------- */

.wrapper {
	min-height: 100%;
	padding-bottom: 60px;
	margin-bottom: -60px;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

.container {
	width: 100%;
	min-width: 990px;
	clear: both;
	position: relative;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

.userInfo {
	float: right;
	padding-right: 20px;
}

footer {
	height: 60px;
	line-height: 66px;
	overflow: hidden;
	color: #fff;
	background: #3E4752;
	font-size: 14px;
	-webkit-box-shadow: 0 0 10px rgba(0,0,0,.17);
	-moz-box-shadow: 0 0 10px rgba(0,0,0,.17);
	box-shadow: 0 0 10px rgba(0,0,0,.17);
	padding-left: 20px;
}

footer a {
	color: inherit;
	text-decoration: none;
}

header {
	-webkit-box-shadow: 0 0 5px rgba(0,0,0,.17);
	-moz-box-shadow: 0 0 5px rgba(0,0,0,.17);
	box-shadow: 0 0 5px rgba(0,0,0,.17);
	background: #3E4752;
	height: 120px;
}

header .logo {
	background: #F1495B image-url('applogo.png') no-repeat center center;
	background-size: cover;
	float: left;
	display: inline-block;
	margin-top: 0px;
	width: 220px;
	height: 120px;
	overflow: hidden;
	text-align: center;
	display: table;
	position: relative;
}

.page-tabs {
	float: left;
	max-width: 730px;
	height: 100%;
}

.logout,.login {
	float: right;
	line-height: 20px;
	font-size: 15px;
	padding-left: 35px;
	padding-right: 35px;
	height: 100%;
	background: #313841;
	text-decoration: none;
	color: #7c8d87;
	-moz-transition: all 200ms ease-in-out;  /* FF3.7+ */
	-o-transition: all 200ms ease-in-out;  /* Opera 10.5 */
	-webkit-transition: all 200ms ease-in-out;  /* Saf3.2+, Chrome */
	transition: all 200ms ease-in-out;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	display: table;
}

.logout a, .login a {
	text-decoration: none;
color: 	#a8acb0;
display: table-cell;
vertical-align: middle;
height: 100%;
}

.logout i, .login i {
	margin-right: 10px;
	font-size: 22px;
	position: relative;
	top: 2px;
}

.logout:hover, .login:hover {
	color: #fff;	
	background: #373f49;
}

.logout:hover a, .login:hover a {
	color: #fff;	

}

.logout:active, .login:active {
	-webkit-transform:scale(0.95); 
	-moz-transform:scale(0.95); 
	-o-transform:scale(0.95); 
	transform:scale(0.95); 
}

.page-tabs li {
	float: left;
	margin: 0;
	height: 100%;
	display: table;
}

.page-tabs a {
	line-height: 100%;
	font-size: 15px;
	padding-left: 35px;
	padding-right: 35px;
	vertical-align: middle;
	height: 100%;
	display: table-cell;
	overflow: hidden;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	text-align: center;
	background: transparent;
	text-decoration: none;
	color: #A8ACB0;
	-moz-transition: all 200ms ease-in-out;  /* FF3.7+ */
	-o-transition: all 200ms ease-in-out;  /* Opera 10.5 */
	-webkit-transition: all 200ms ease-in-out;  /* Saf3.2+, Chrome */
	transition: all 200ms ease-in-out;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	position: relative;
}

.page-tabs .active-marker {
	position: absolute;
	bottom: 0;
	right: 0;
	width: 10px;
	height: 10px;
	background: #e7e7e7;	
}

.page-tabs li a > span {
	font-family: 'ElegantIcons';
	font-size: 22px;
	font-weight: normal;
	vertical-align: middle;
	position: relative;
	top: -2px;
	margin-right: 10px;
}

.page-tabs li:nth-child(3) a > span {
	font-family: 'ElegantIcons';
	font-size: 22px;
	font-weight: normal;
	vertical-align: middle;
	position: relative;
	top: -4px;
	margin-right: 10px;
}

.page-tabs a:hover {
	color: #f8f8f8;	
	background: #373f49;
}

.page-tabs a.active {
	color: #f8f8f8;	
	background: #313841 !important;
}

.page-tabs a:hover .active-marker, .page-tabs a.active .active-marker {
	background: #f8f8f8;
}

.page-tabs a:active {
	-webkit-transform:scale(0.95); 
	-moz-transform:scale(0.95); 
	-o-transform:scale(0.95); 
	transform:scale(0.95); 
}

.content {
	padding-top: 20px;
	padding-bottom: 20px;
	padding-left: 20px;
	background: #ececec;
}

table thead th {
	padding: 10px 18px
}

.main-header {
	margin-top: 0;
	margin-bottom: 10px;
}

h1 {
	font-weight: normal;
	font-size: 18px;
	color: #878ea2;
	font-weight: 600;
	text-transform: uppercase;
	text-shadow: 0 1px 0 #ebebeb, 0 0 1px rgba(124, 141, 135, 0.35);
}

thead th, tfoot th {
	font-weight: normal !important;
	white-space: nowrap;
	color: #fff;
	background: #878D7C !important;
	border-color: #fff !important;
}

table#data {
	margin: 20px 0 !important;
	font-size: 15px;
}

.dataTables_length, .dataTables_filter {
	margin: 0 20px 20px 0 !important;
}

.icon {
	font-size: 24px;
	width: 24px;
	margin: 0 auto;
}

div.icon_check_alt:before {
	text-align: center;
	display: block;
	color: #12C897;
}

div.icon_close_alt:before {
	text-align: center;
	display: block;
	color: #F1485B;
}

th.th-group-1 {background: #52594a !important;}
th.th-group-2 {background: #6a7161 !important;}
th.th-group-3 {background: #56687a !important;}

.dataTables_length label {
	width: 193px;
	float:left;
	line-height: 32px;
}

.dataTables_filter {
	line-height: 32px;
}

.dataTables_filter input {
	background-color: rgba(white, 0.0);
	border: solid 1px #acacac;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	font-weight: normal;
	height: 32px;
	line-height: 20px;
	position: relative;
	color: #000 !important;
	float: right;
	width: 100px;
	outline: none !important;
	padding: 0 15px;
	-moz-transition: all 200ms ease-in-out;  /* FF3.7+ */
	-o-transition: all 200ms ease-in-out;  /* Opera 10.5 */
	-webkit-transition: all 200ms ease-in-out;  /* Saf3.2+, Chrome */
	transition: all 200ms ease-in-out;
}

.dataTables_filter input:focus {
	background-color: #f8f8f8;
	border-color:#999999;
}

div.ColVis {
	floaT: left;
	margin-right: 10px;
}
button.ColVis_Button {
	height: 32px;
	box-shadow: none !important;
	font-size: 13px;
	font-family: inherit !important;
}
.ColVis_collection input[type='checkbox'] {
	margin-top: 5px;
	float: left;
}

.container-login {
	text-align: center;
	padding-top: 100px;
}

input[type='text'],input[type='password'] {
	background-color: rgba(white, 0.0);
	border: solid 1px #acacac;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	font-weight: normal;
	height: 32px;
	line-height: 20px;
	position: relative;
	color: #000 !important;
	width: 320px;
	outline: none !important;
	margin-bottom: 15px;
	padding: 0 15px;
	-moz-transition: all 200ms ease-in-out;
	-o-transition: all 200ms ease-in-out;
	-webkit-transition: all 200ms ease-in-out;
	transition: all 200ms ease-in-out;
}


input[type='text']:focus, input[type='password']:focus {
	background-color: #f8f8f8;
	border-color:#999999;
}

button.login {
	border: none;
	float: none;
	margin: 0 auto;
	height: 35px;
	line-height: 32px;
	width: 320px;
}

.log-box {
	position: fixed;
	top: -200px;
	left: 45%;
	padding: 20px 30px;
	max-width: 400px;
	background: #878D7C;
	-webkit-border-radius: 0 0 3px 3px;
	-moz-border-radius: 0 0 3px 3px;
	border-radius: 0 0 3px 3px;
	-webkit-box-shadow: 0 0 5px rgba(0,0,0,.17);
	-moz-box-shadow: 0 0 5px rgba(0,0,0,.17);
	box-shadow: 0 0 5px rgba(0,0,0,.17);
	z-index: 1001;
	color: #fff;
	font-size: 16px;
	overflow: hidden;
}

table .editable input {
	width: auto !important;
	margin: 0 !important;
	display: inline;
	padding-right: 65px !important;
	width: 150px !important;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

.editable {
	position: relative;
}

.editable .icon_check_alt {
	top: 13px;
	right: 46px;
	font-size: 23px;
}

.editable .icon_close_alt {	
	top: 13px;
	right: 17px;
}

.editable .icon {
	position: absolute;
	cursor: pointer;
	-moz-transition: all 200ms ease-in-out;  /* FF3.7+ */
	-o-transition: all 200ms ease-in-out;  /* Opera 10.5 */
	-webkit-transition: all 200ms ease-in-out;  /* Saf3.2+, Chrome */
	transition: all 200ms ease-in-out;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.editable .icon:hover {
	color: #86BC31;
}

.editable .icon:active {
	-webkit-transform:scale(0.95); 
	-moz-transform:scale(0.95); 
	-o-transform:scale(0.95); 
	transform:scale(0.95);
	-moz-transition: all 50ms ease-in-out;  /* FF3.7+ */
	-o-transition: all 50ms ease-in-out;  /* Opera 10.5 */
	-webkit-transition: all 50ms ease-in-out;  /* Saf3.2+, Chrome */
	transition: all 50ms ease-in-out;	
}

.td-icons {
	white-space: nowrap;
}

.td-icons .icon {
	display: inline-block;
	margin: 5px 2px 0 2px;
	-moz-transition: all 200ms ease-in-out;  /* FF3.7+ */
	-o-transition: all 200ms ease-in-out;  /* Opera 10.5 */
	-webkit-transition: all 200ms ease-in-out;  /* Saf3.2+, Chrome */
	transition: all 200ms ease-in-out;
}
.td-icons .icon:hover {
	cursor: pointer;
	color: #3ab13c;
}

.update-participant {
	position: fixed;
	width: 100%;
	height: 100%;
	background: rgba(0,0,0,.5);
	z-index: 1010;
	display: none;
}

.add-new-cont {
	position: fixed;
	width: 100%;
	height: 100%;
	background: rgba(0,0,0,.5);
	z-index: 1010;
	display: none;
}

.new-form {
	background: #fff;
	padding: 15px 30px;
	width: 520px;
	min-height: 200px;
	margin: 100px auto 0 auto;
	-webkit-box-shadow: 0 0 13px rgba(0,0,0,.17);
	-moz-box-shadow: 0 0 13px rgba(0,0,0,.17);
	box-shadow: 0 0 13px rgba(0,0,0,.17);
	position: relative;
}

.new-form h2 {
	margin-top: 0;
	margin-bottom: 10px;
}

.new-form input[type='text'] {
	float: left;
	width: 41%;
}

.new-form input[type='text']:nth-child(2n) {
	float: right;
}


.new-form input[type='checkbox'] {
	float: left;
	margin-top: 5px;
}

.checkbox-part {
	width: 25%;
	float: left;
}
.checkbox-part label {
	float: left;
	padding-right: 10px;
}

.form-row-checkbox {
	margin-bottom: 15px;
}

#new-form-close {
	position: absolute;
	right: -10px;top:-40px;
	font-size: 40px;
	color: #fff;
	cursor: pointer;
	-moz-transition: all 200ms ease-in-out;  /* FF3.7+ */
	-o-transition: all 200ms ease-in-out;  /* Opera 10.5 */
	-webkit-transition: all 200ms ease-in-out;  /* Saf3.2+, Chrome */
	transition: all 200ms ease-in-out;
}

#update-close {
	position: absolute;
	right: -10px;top:-40px;
	font-size: 40px;
	color: #fff;
	cursor: pointer;
	-moz-transition: all 200ms ease-in-out;  /* FF3.7+ */
	-o-transition: all 200ms ease-in-out;  /* Opera 10.5 */
	-webkit-transition: all 200ms ease-in-out;  /* Saf3.2+, Chrome */
	transition: all 200ms ease-in-out;
}


#new-form-close:hover {
	color: #86BC31 ;
}

.log-txt .ColVis {
	margin-top: 5px;
	margin-bottom: 0;
}

td {
	text-align: center;
}

